syntax = "proto3";

option go_package = "/reader_service";

import "proto/model/product.proto";

message CreateProductReq {
  Product product = 1;
}

message CreateProductRes {
  Product product = 1;
}

message GetProductByIDReq {
  string ProductID = 1;
}

message GetProductByIDRes {
  Product product = 1;
}